@@ -11,6 +11,7 @@ Unreleased Version 2.3.0-pre
  * Fix: Correctly calculate the distance to move before a press is no longer considered a long-press. The calculation ended up with incorectly small values in most cases.
  * Fix: Improve long-press handling for context menus to act more like a real right-click would.
  * Fix: Don't delay long-presses by left-click or touch kinetic scrolling.
+ * Feature: Add touch draw pressure settings, because apparently some screen tablets on Android use touch inputs instead of stylus ones. Thanks SurgeonTaco for suggesting.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
